--- a/src/components/pages/Home/WeekSpecials.css
+++ b/src/components/pages/Home/WeekSpecials.css
@@ -34,8 +34,18 @@
   grid-column: 1 / 3;
 }
 }
-
-@media (max-width: 692px) {
+@media (max-width: 720px) {
+  .week-specials {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+  }
+  
+  .week-specials-header {
+    grid-column: 1 / 2;
+  }
+  }
+  
+@media (max-width: 484px) {
 .week-specials {
   grid-template-columns: 1fr;
   grid-template-rows: repeat(4, auto);
@@ -43,5 +53,11 @@
 
 .week-specials-header {
   grid-column: 1 / 2;
+}
+.button-primary{
+  width: 30%;
+  height: 60%;
+  font-size: large;
+  align-self: center;
 }
 }
