Fixed the bug in Menu Section. Made some minor bug fixes here and there

--- a/src/components/pages/Home/MealCard.css
+++ b/src/components/pages/Home/MealCard.css
@@ -4,7 +4,8 @@
 .meal-card {
   grid-column: auto;
   grid-row: 2;
-  min-height: 31.25rem;
+  min-height: auto;
+  min-width: fit-content;
   padding-bottom: 2.5rem;
   display: flex;
   flex-direction: column;
