--- a/src/components/pages/Home/WeekSpecials.css
+++ b/src/components/pages/Home/WeekSpecials.css
@@ -26,12 +26,15 @@
 
 @media (max-width: 960px) {
 .week-specials {
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
 }
 
 .week-specials-header {
   grid-column: 1 / 3;
+}
+.button-primary{
+  min-height: 50px;
 }
 }
 @media (max-width: 720px) {
@@ -39,16 +42,16 @@
     grid-template-columns: 1fr;
     grid-template-rows: auto auto auto;
   }
-  
+
   .week-specials-header {
     grid-column: 1 / 2;
   }
   }
-  
+
 @media (max-width: 484px) {
 .week-specials {
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(4, auto);
+  grid-template-rows: repeat(3, auto);
 }
 
 .week-specials-header {
