--- a/src/components/pages/Menu/Menu.css
+++ b/src/components/pages/Menu/Menu.css
@@ -1,14 +1,41 @@
 .menu-appetizers,
 .menu-main-course,
 .menu-dessert {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row: auto;
+  gap: 1.25rem;
   margin-left: 10%;
   margin-right: 10%;
-  gap: 1.25rem;
+  width:auto;
 }
-
+h2{
+  margin-bottom: 20px;
+}
+.meal-card:nth-child(1){
+  grid-column: 1;
+  grid-row: 1;
+}
+.meal-card:nth-child(2){
+  grid-column: 2;
+  grid-row: 1;
+}
+.meal-card:nth-child(3){
+  grid-column: 3;
+  grid-row: 1;
+}
+.meal-card:nth-child(4){
+  grid-column: 1;
+  grid-row: 2;
+}
+.meal-card:nth-child(5){
+  grid-column: 2;
+  grid-row: 2;
+}
+.meal-card:nth-child(6){
+  grid-column: 3;
+  grid-row: 2;
+}
 .menu-header h2 {
   line-height: 1;
   font-family: "Markazi Text";
@@ -19,23 +46,73 @@
 .menu-header {
   margin-top: 3%;
   margin-left: 12%;
-}
-
-.meal-card {
-  flex-basis: calc(33.33% - 1.25rem);
-  max-width: calc(33.33% - 1.25rem);
+  grid-column: 1 / -1;
 }
 
 @media (max-width: 960px) {
-  .meal-card {
-    flex-basis: calc(50% - 1.25rem);
-    max-width: calc(50% - 1.25rem);
+  .menu-appetizers,
+  .menu-main-course,
+  .menu-dessert {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .meal-card:nth-child(1){
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .meal-card:nth-child(2){
+    grid-column: 2;
+    grid-row: 1;
+  }
+  .meal-card:nth-child(3){
+    grid-column: 1;
+    grid-row: 2;
+  }
+  .meal-card:nth-child(4){
+    grid-column: 2;
+    grid-row: 2;
+  }
+  .meal-card:nth-child(5){
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .meal-card:nth-child(6){
+    grid-column: 2;
+    grid-row: 3;
   }
 }
 
 @media (max-width: 692px) {
-  .meal-card {
-    flex-basis: 100%;
-    max-width: 100%;
+  .menu-appetizers,
+  .menu-main-course,
+  .menu-dessert {
+    grid-template-columns: 1fr;
+  }
+
+  .menu-header {
+    grid-column: auto;
+  }
+  .meal-card:nth-child(1){
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .meal-card:nth-child(2){
+    grid-column: 1;
+    grid-row: 2;
+  }
+  .meal-card:nth-child(3){
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .meal-card:nth-child(4){
+    grid-column: 1;
+    grid-row: 4;
+  }
+  .meal-card:nth-child(5){
+    grid-column: 1;
+    grid-row: 5;
+  }
+  .meal-card:nth-child(6){
+    grid-column: 1;
+    grid-row: 6;
   }
 }
