--- a/src/components/pages/Home/WeekSpecials.css
+++ b/src/components/pages/Home/WeekSpecials.css
@@ -1,6 +1,6 @@
 .week-specials {
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto;
   gap: 1.25rem;
 }
 
@@ -14,6 +14,7 @@
 }
 .button-primary{
   color: azure;
+  width: fit-content;
 }
 .week-specials-header h2 {
   line-height: 1;
